--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,24 @@
 
-spring.h2.console.enabled=true
-
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:mem:ecommerce
+#spring.h2.console.enabled=true
+#
+#spring.h2.console.path=/h2-console
+#
+#spring.datasource.url=jdbc:h2:mem:ecommerce
 
 spring.data.rest.base-path=/rest
 
 spring.jackson.serialization.INDENT_OUTPUT=true
+
+logging.level.org.springframework.security=DEBUG
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/homebanking
+
+spring.datasource.username=----------------------
+
+spring.datasource.password=--------------------------
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.jpa.generate-ddl=true
+
+spring.jpa.hibernate.ddl-auto=create
