--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,11 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 logging.level.org.springframework.security=DEBUG
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/homebanking
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 
-spring.datasource.username=----------------------
+spring.datasource.username=ecommerceapp
 
-spring.datasource.password=--------------------------
+spring.datasource.password=ecommerceapp
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
