--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 logging.level.org.springframework.security=DEBUG
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://ep-long-thunder-19982400.us-east-2.aws.neon.fl0.io:5432/ecommerce
 
-spring.datasource.username=ecommerceapp
+spring.datasource.username=fl0user
 
-spring.datasource.password=ecommerceapp
+spring.datasource.password=1UOIdbnP9Bkf
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
