--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 
 spring.jpa.hibernate.ddl-auto=none
+
+spring.mail.host= smtp.gmail.com
+
+spring.mail.port= 587
+
+spring.mail.username=velvetecommerce2023@gmail.com
+
+spring.mail.password=Velvet2023
