--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,4 @@ spring.mail.port= 587
 
 spring.mail.username=velvetecommerce2023@gmail.com
 
-spring.mail.password=Velvet2023
+spring.mail.password=gftz vzdy wkbw rpmq
