--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-#spring.h2.console.enabled=true
-#
-#spring.h2.console.path=/h2-console
-#
-#spring.datasource.url=jdbc:h2:mem:ecommerce
+spring.h2.console.enabled=true
+
+spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:h2:mem:ecommerce
 
 spring.data.rest.base-path=/rest
 
@@ -11,17 +11,17 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 logging.level.org.springframework.security=DEBUG
 
-spring.datasource.url=jdbc:postgresql://ep-long-thunder-19982400.us-east-2.aws.neon.fl0.io:5432/ecommerce
+#spring.datasource.url=jdbc:postgresql://ep-long-thunder-19982400.us-east-2.aws.neon.fl0.io:5432/ecommerce
 
-spring.datasource.username=fl0user
+#spring.datasource.username=fl0user
 
-spring.datasource.password=1UOIdbnP9Bkf
+#spring.datasource.password=1UOIdbnP9Bkf
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create
 
 spring.mail.host= smtp.gmail.com
 
